apps/goatlint/src/snapshots/fixtures__cli__output_formatter_diagnostic_--format=unix --report-unused-disable-directives disable-directive.js@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: --format=unix --report-unused-disable-directives disable-directive.js
working directory: fixtures/cli/output_formatter_diagnostic
----------
disable-directive.js:9:1: Unused eslint-disable directive (no problems were reported). [Warning]
disable-directive.js:12:1: Unused eslint-disable directive (no problems were reported). [Warning]
disable-directive.js:15:1: Unused eslint-disable directive (no problems were reported). [Warning]

3 problems
----------
CLI result: LintSucceeded
----------
