apps/goatlint/src/snapshots/fixtures__cli__output_formatter_diagnostic_--format=unix ok.js@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: --format=unix ok.js
working directory: fixtures/cli/output_formatter_diagnostic
----------
----------
CLI result: LintSucceeded
----------
