apps/goatlint/src/snapshots/fixtures__cli__overrides_-c .goatlintrc.json test.ts@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: -c .goatlintrc.json test.ts
working directory: fixtures/cli/overrides
----------

  x eslint(no-var): Unexpected var, use let or const instead.
   ,-[test.ts:1:1]
 1 | var msg = "hello";
   : ^^^
 2 | console.log(msg);
   `----
  help: Replace var with let or const

  ! eslint(no-console): Unexpected console statement.
   ,-[test.ts:2:1]
 1 | var msg = "hello";
 2 | console.log(msg);
   : ^^^^^^^^^^^
   `----
  help: Delete this console statement.

Found 1 warning and 1 error.
Finished in <variable>ms on 1 file with 128 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
